# liftoff

./: CMakeLists.txt  Doxyfile  README.md
cmake/: DownloadJson.cmake  DownloadMatplotlib.cmake  ExportLibrary.cmake  FindGMP.cmake
data/: data.json
liftoff-cli/: CMakeLists.txt  c11_binary_latch.cpp  c11_binary_latch.h  data_plotter.cpp  data_plotter.h  data_plotter_link.h  drag.cpp  drag.h  engine.cpp  engine.h  main.cpp  pidf_controller.cpp  pidf_controller.h  recording_fdb.cpp  recording_fdb.h  recording_vdb.cpp  recording_vdb.h  rocket.cpp  rocket.h  telemetry_flight_profile.cpp  telemetry_flight_profile.h  thrust.cpp  thrust.h  velocity_flight_profile.cpp  velocity_flight_profile.h
liftoff-physics/: CMakeLists.txt  liftoff-physicsConfig.cmake.in
liftoff-physics/liftoff-physics/: body.cpp  body.h  drag.cpp  drag.h  driven_body.cpp  driven_body.h  force_driven_body.cpp  force_driven_body.h  linalg.cpp  linalg.h  matrix.cpp  matrix.h  polynomial.cpp  polynomial.h  telem_proc.cpp  telem_proc.h  vector.cpp  vector.h  velocity_driven_body.cpp  velocity_driven_body.h
matlab/: FlightProfile.m  PolyRegression.m  RocketDrag.m
